:fire: Adding libs, Adding Routing

--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -1,1 +1,6 @@
-<training-buddy-shell-feature></training-buddy-shell-feature>
+<h3>Current working routes:</h3>
+<p>=   /login</p>
+<p>=   /signup</p>
+<hr>
+
+<router-outlet></router-outlet>
