--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
@@ -1,3 +1,10 @@
+<unsigned-navbar></unsigned-navbar>
+
+<!-- <picture>
+  <source media='(min-width:0px)' srcset="https://material.angular.io/assets/img/examples/shiba2.jpg">
+  <img mat-card-image src="" alt="Photo of a Shiba Inu">
+</picture> -->
+
 <mat-grid-list cols="1" rows="1" rowHeight="2:1">
 
     <mat-card>
@@ -6,8 +13,8 @@
 
           <form>
 
-            <h1 class="text-center">Training-Buddy-Logo</h1>
-            <h2 class="text-center"te>Log In</h2>
+            <h1 class="text-center">Log In</h1>
+            <!-- <h2 class="text-center"te>Log In</h2> -->
 
             <!-- <mat-error>
               The username and password were not recognized
