:lipstick: Rough final signup and login forms with google auto complete and geo-coding

--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
@@ -1,3 +1,5 @@
+<div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
+
 <unsigned-navbar></unsigned-navbar>
 
 <!-- <picture>
@@ -47,3 +49,5 @@
       </mat-card>
 
 </mat-grid-list>
+
+</div>
