--- a/libs/client/shared/components/navbar/ui/src/lib/unsignednavbar/unsignednavbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/unsignednavbar/unsignednavbar.component.html
@@ -1,13 +1,15 @@
-<mat-toolbar colour="primary">
+<p>
 
-  <span>Training-Buddy</span>
+  <mat-toolbar id="bar">
 
-  <div class="spacer"></div>
+    <mat-toolbar-row>
 
-  <!-- <mat-menu>
-    <button mat-menu-item>Get Started</button>
-    <button mat-menu-item>About Us</button>
-    <button mat-menu-item>Log In</button>
-  </mat-menu> -->
+      <span>Training-Buddy</span>
 
-</mat-toolbar>
+      <span class="example-spacer"></span>
+
+    </mat-toolbar-row>
+
+  </mat-toolbar>
+
+</p>
