--- a/libs/client/signup/feature/src/lib/signup/signup.component.html
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.html
@@ -1,3 +1,6 @@
+
+<div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
+
 <unsigned-navbar></unsigned-navbar>
 
 <mat-grid-list cols="1" rows="1" rowHeight="2:1">
@@ -9,11 +12,6 @@
           <form>
 
             <h1 class="text-center">Sign Up</h1>
-            <!-- <h2 class="text-center"te>Sign Up</h2> -->
-
-            <!-- <mat-error>
-              The username and password were not recognized
-            </mat-error> -->
 
             <!-- userName -->
             <mat-form-field appearance="outline">
@@ -45,7 +43,7 @@
             <!-- password -->
             <mat-form-field appearance="outline">
                 <mat-label>Password</mat-label>
-                <input id="password" matInput [type]="hide ? 'password' : 'text'">
+                <input id="password" matInput [type]="hide ? 'password' : 'text'" required>
                 <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                   <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
@@ -53,6 +51,7 @@
 
             <!-- cellNumber -->
             <mat-form-field appearance="outline">
+                <mat-label>Phone Number</mat-label>
                 <input id="cellNumber" matInput type="tel" placeholder="Phone Number" name="cellNumber" required>
                 <mat-error>
                     Please provide a valid phone number
@@ -62,7 +61,7 @@
             <!-- gender -->
             <mat-form-field appearance="outline">
                 <mat-label>Gender</mat-label>
-                <mat-select id="gender">
+                <mat-select id="gender" required>
                     <mat-option value="one">Male</mat-option>
                     <mat-option value="two">Female</mat-option>
                 </mat-select>
@@ -71,12 +70,18 @@
                 </mat-error>
             </mat-form-field>
 
-            <!-- location? -->
+            <!-- location with google autocomplete -->
             <mat-form-field appearance="outline">
-                <input id="location" matInput type="location" placeholder="Location" name="location" required>
-                <!-- <mat-error>
-                    Please provide a valid email address
-                </mat-error> -->
+                <mat-label>Location</mat-label>
+                <input matInput
+                       matGoogleMapsAutocomplete
+                       (onAutocompleteSelected)="onAutocompleteSelected($event)"
+                       (onLocationSelected)="onLocationSelected($event)" required>
+                       <mat-hint class="fullhint">
+                           <div>
+                               <div class="row pBy"><p>powered by</p>&nbsp;<p class="b">G</p><p class="r">o</p><p class="y">o</p><p class="b">g</p><p class="g">l</p><p class="r">e</p></div>
+                            </div>
+                        </mat-hint>
             </mat-form-field>
 
             <div class="submitbutton mt-3">
@@ -91,3 +96,5 @@
       </mat-card>
 
 </mat-grid-list>
+
+</div>
