--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.scss
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.scss
@@ -1,7 +1,13 @@
 mat-card {
     max-width: 400px;
+    width: 90vw;
     margin: 2em auto;
     padding: 2em auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -0%);
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .text-center {
@@ -24,6 +30,7 @@ mat-form-field {
 
 #login {
     width: 100%;
+    background-color: #1b1a1b !important;
 }
 
 .signUp {
@@ -42,4 +49,10 @@ mat-form-field {
 
 .signUpLink:hover {
     cursor: pointer;
+}
+
+#background {
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
