--- a/libs/client/signup/feature/src/lib/signup/signup.component.html
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.html
@@ -83,7 +83,7 @@
                             </div>
                         </mat-hint>
             </mat-form-field>
-
+            <!--Submit button-->
             <div class="submitbutton mt-3">
                 <button id="signup" (click)="signup()" class="text-center ml-1" mat-raised-button color="primary">Sign Up</button>
                 <div class="logIn"><p>Have An Account?</p><p routerLink="/login" class="logInLink">Log In</p></div>
