:fire: Final design for signup

--- a/libs/client/signup/feature/src/lib/signup/signup.component.scss
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.scss
@@ -79,3 +79,11 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+mat-error {
+    text-align: right;
+}
+
+mat-hint {
+    text-align: right !important;
+}
