:pencil2: camelCase fix on scss class

--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
@@ -37,7 +37,7 @@
               </mat-error>
             </mat-form-field>
 
-            <div class="submitbutton mt-3">
+            <div class="submitButton mt-3">
                 <!-- <button routerLink="/signup" type="button" class="text-center mr-1" mat-raised-button color="primary">Register</button> -->
                 <button id="login" (click)="login()" class="text-center ml-1" mat-raised-button color="primary">Login</button>
                 <div class="signUp"><p>No Account?</p><p routerLink="/signup" class="signUpLink">Sign Up</p></div>
