--- a/libs/client/signup/feature/src/lib/signup/signup.component.html
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.html
@@ -96,7 +96,7 @@
                     </mat-hint>
                 </mat-form-field>
                 <!--Submit button-->
-                <div class="submitbutton mt-3">
+                <div class="submitButton mt-3">
                     <button id="signup" (click)="signup()" class="text-center ml-1" mat-raised-button color="primary">Sign Up</button>
                     <div class="logIn"><p>Have An Account?</p><p routerLink="/login" class="logInLink">Log In</p></div>
                 </div>
