:adhesive_bandage: Fixing link of navbar components

--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
@@ -1,6 +1,6 @@
 <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
 
-<unsigned-navbar></unsigned-navbar>
+<training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
 
 <!-- <picture>
   <source media='(min-width:0px)' srcset="https://material.angular.io/assets/img/examples/shiba2.jpg">
