--- a/libs/client/signup/feature/src/lib/signup/signup.component.html
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.html
@@ -1,7 +1,7 @@
 
 <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
 
-    <unsigned-navbar></unsigned-navbar>
+    <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
     
     <mat-grid-list cols="1" rows="1" rowHeight="2:1">
     
