:lipstick: Adding signedin navbar

--- a/libs/client/shared/components/navbar/ui/src/lib/signed/signed.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/signed/signed.component.html
@@ -1,1 +1,15 @@
-<p>signed works!</p>
+<p>
+
+    <mat-toolbar id="bar">
+  
+      <mat-toolbar-row>
+  
+        <span>Training-Buddy (signed in)</span>
+  
+        <span class="example-spacer"></span>
+  
+      </mat-toolbar-row>
+  
+    </mat-toolbar>
+  
+  </p>
