💄initial commit of settings page

--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -1,1 +1,39 @@
 <training-buddy-signed-navbar></training-buddy-signed-navbar>
+<div class="main">
+    <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Taku Muguti</mat-card-title>
+          <mat-card-subtitle>takumuguti@gmail.com</mat-card-subtitle>
+        <button mat-raised-button color="primary"> Edit Profile</button>
+        </mat-card-header>
+      
+        <mat-card-content>
+            <section>
+                <div class="example-label">Notification</div>
+            </section>
+            <mat-divider></mat-divider>
+            <section>
+                <div class="example-label">Privacy</div>
+            </section>
+            <mat-divider></mat-divider>
+            <section>
+                <div class="example-label">Security</div>
+            </section>
+            <mat-divider></mat-divider>
+            <section>
+                <div class="example-label">Help</div>
+            </section>
+            <mat-divider></mat-divider>
+            <section>
+                <div class="example-label">About</div>
+            </section>
+            <mat-divider></mat-divider>
+            <section>
+                <div class="example-label">Log Out</div>
+            </section>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+      </mat-card>
+    
+</div>
