--- a/libs/client/settings/feature/src/lib/settings/settings.component.scss
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.scss
@@ -1,14 +1,14 @@
-.example-card {
+.mainCard {
     max-width: 400px;
-  }
+}
   
-  .example-header-image {
+.profilePhoto {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
-  }
-
-  mat-icon.mat-card-avatar {
-    width: 40px;
-    height: 40px;
-    font-size: 40px;
-  }
+}
+.label {
+    display: table-cell;
+    font-size: 14px;
+    margin-left: 8px;
+    min-width: 120px;
+}
