--- a/libs/client/settings/feature/src/lib/settings/settings.component.scss
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.scss
@@ -1,5 +1,12 @@
 .mainCard {
     max-width: 400px;
+    width: 90vw;
+    margin: 2em auto;
+    padding: 2em auto;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -0%);
+    background-color: rgba(255, 255, 255, 1);
 }
   
 .profilePhoto {
@@ -11,4 +18,7 @@
     font-size: 14px;
     margin-left: 8px;
     min-width: 120px;
+}
+.option :hover{
+    background-color: rgba(255, 255, 255, 0.562);
 }
