:art: :lipstick: Adding athlete preference page
- Ready to be linked to the API
- @MuziwandileTNdlovu @takumuguti I need a query string to insert and test when you ready
- Needing redirection on valid submit

--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<training-buddy-signed-navbar></training-buddy-signed-navbar>
+
+<div id="background">
+
+    <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
+    dashboard
+    
+</div>
