--- a/libs/client/profile/feature/src/lib/profile/profile.component.html
+++ b/libs/client/profile/feature/src/lib/profile/profile.component.html
@@ -1,1 +1,14 @@
 <training-buddy-signed-navbar></training-buddy-signed-navbar>
+
+<div class="example-container mat-elevation-z8">
+    <mat-card class="example-card">
+      <mat-card-header class="text-center">
+        <mat-card-title><h2>Edit Profile </h2></mat-card-title>
+      </mat-card-header>
+      <div class="editHeader">
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <button type="button" class="btn"  mat-flat-button color="primary"><mat-icon>camera_alt</mat-icon></button>
+      </div>
+     
+    </mat-card>
+  </div>
